# invoicing_tools

./: .gitignore  .gitmodules  .travis.yml  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
invoicing_tools/: __init__.py  cli.py  codec.py  exceptions.py  google_email.py  invoice_template.html  invoice_template_bs5.html  invoices.py  models.py  naming.py  ocr.py  pasers.py  settings.py  utils.py
invoicing_tools/_legacy/: google_api.py  google_email.py
invoicing_tools/aws/: _expermental.py  _extract_experimental.py  _extract_experimental_pdf.py  adapters.py  config.py  extraction.py  s3_management.py  workflow.py
invoicing_tools/config/: configuration.py
invoicing_tools/db/: cli_commands.py  managers.py  models.py
invoicing_tools/email/: cli_commands.py  mailer.py  models.py
invoicing_tools/files/: cli_commands.py
invoicing_tools/gdrive/: builders.py  cli_commands.py  db.py  gdrive.py  google_drive.py  models.py
invoicing_tools/templates/: bootstrap5_invoice_template.html  invoice_template.html  main.css  tailwind_invoice_template.html  tailwind_invoice_template_email.html
invoicing_tools/text_extraction/: aws.py  segmentation.py
output/: Invoice-105-Abr-2022.html  invoice.html
tests/: __init__.py  conftest.py  test_invoicing_tools.py  test_naming.py  test_ocr.py  test_parsers.py
tests/aws/: test_adapters.py
tests/db/: test_managers.py  test_models.py
tests/email/: test_mailer.py
tests/fixtures/: Scanned_20230514-1153.png.json  fiscal_invoice_manual.json  fiscal_invoice_ocr_date.json
tests/gdrive/: test_db.py  test_gdrive.py  test_models.py
tests/text_extraction/: test_aws.py  test_segmentration.py
