[tool.poetry]
name = "invoicing_tools"
version = "0.4.1"
homepage = "https://github.com/luiscbberrocal/invoicing_tools"
description = ""
authors = ["Luis C. Berrocal <luis.berrocal.1942@gmail.com>"]
readme = "README.md"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'Natural Language :: English',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
]
packages = [
    { include = "invoicing_tools" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
jinja2 = "^3.1.2"
pillow = "^9.5.0"
pytesseract = "^0.3.10"
pydantic = "^2.5.3"
pdf2image = "^1.16.2"
toml = "^0.10.2"
pdfkit = "^1.0.0"
sqlmodel = "^0.0.14"
opencv-python = "^4.7.0.72"
pypdf2 = "^3.0.1"
boto3 = "^1.26.134"
gdrive-pydantic-wrapper = "0.3.0"

[tool.poetry.scripts]
invoicing-tools = 'invoicing_tools.cli:main'

[tool.poetry.group.dev.dependencies]
bump2version = "^1.0.1"
flake8 = "^6.0.0"
twine = "^4.0.2"
pytest = "^7.2.0"
coverage = "^7.0.4"
tox = "^4.2.6"
pytest-cov = "^4.0.0"
mypy = "^0.991"
flake8-docstrings = "^1.6.0"
python-dotenv = "^1.0.0"


[tool.poetry.group.doc.dependencies]
mkdocs = "^1.5.3"
mkdocs-include-markdown-plugin = "^6.0.3"
mkdocs-material = "^9.4.6"
mkdocs-autorefs = "^0.5.0"
mkdocstrings = {extras = ["python"], version = "^0.24.0"}

[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ['py39', 'py310']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
skip_gitignore = true
# you can skip files as below
#skip_glob = docs/conf.py

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
